fixing spacing

--- a/sass_scss/1-color_variable.scss
+++ b/sass_scss/1-color_variable.scss
@@ -1,9 +1,10 @@
 */ Assinging a text color to the HTML tags body and p */
-$primary-text-color: #3D3D3D;
+$text-color: #3D3D3D;
 
 body {
-  color: $primary-text-color;
+  color: $text-color;
 }
+
 p {
-  color: $primary-text-color;
+  color: $text-color;
 }
